WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117374
before/after generated content is not working with HTMLSummaryElement and HTMLDetailsElement.
https://bugs.webkit.org/show_bug.cgi?id=117374
Summary
before/after generated content is not working with HTMLSummaryElement and HTM...
Igor Trindade Oliveira
Reported
2013-06-08 14:32:08 PDT
Created
attachment 204098
[details]
test case The word "before" and "after" should appear in the test case.
Attachments
test case
(469 bytes, text/html)
2013-06-08 14:32 PDT
,
Igor Trindade Oliveira
no flags
Details
Proposed patch
(6.59 KB, patch)
2013-06-08 14:45 PDT
,
Igor Trindade Oliveira
no flags
Details
Formatted Diff
Diff
Proposed patch
(17.19 KB, patch)
2013-06-08 16:27 PDT
,
Igor Trindade Oliveira
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Igor Trindade Oliveira
Comment 1
2013-06-08 14:45:53 PDT
Created
attachment 204099
[details]
Proposed patch
Ryosuke Niwa
Comment 2
2013-06-08 15:04:41 PDT
Comment on
attachment 204099
[details]
Proposed patch Could you add a png as well? Use --pixel option.
Igor Trindade Oliveira
Comment 3
2013-06-08 16:27:20 PDT
Created
attachment 204101
[details]
Proposed patch Add pixel test.
WebKit Commit Bot
Comment 4
2013-06-08 19:43:58 PDT
Comment on
attachment 204101
[details]
Proposed patch Clearing flags on attachment: 204101 Committed
r151351
: <
http://trac.webkit.org/changeset/151351
>
WebKit Commit Bot
Comment 5
2013-06-08 19:44:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug