before/after generated content is not working with HTMLSummaryElement and HTMLDetailsElement. https://bugs.webkit.org/show_bug.cgi?id=117374

Source/WebCore:

Allow before/after pseudo generated content be added in HTMLDetailsElement and HTMLSumamaryElement.

Reviewed by Ryosuke Niwa.

Test: fast/css-generated-content/details-summary-before-after.html

* html/HTMLDetailsElement.cpp:
(WebCore::HTMLDetailsElement::childShouldCreateRenderer):
* html/HTMLSummaryElement.cpp:
(WebCore::HTMLSummaryElement::childShouldCreateRenderer):

LayoutTests:

Reviewed by Ryosuke Niwa.

* fast/css-generated-content/details-summary-before-after.html: Added.
* platform/mac/fast/css-generated-content/details-summary-before-after-expected.txt: Added.
* platform/mac/fast/css-generated-content/details-summary-before-after-expected.png: Added


Canonical link: https://commits.webkit.org/135610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151351 268f45cc-cd09-0410-ab3c-d52691b4dbfc